# midixer

./: .gitignore  README.md  messages.h  midixer.ino
software/: .gitignore  CMakeLists.txt  README.md  build-arduino-micro.sh  build-tests.sh
software/include/: mackie-control.h  midi-msg.h  track.h
software/include/midi/: midi-msg.h
software/include/midixer/: midixer-cb-intf-mock.h  midixer-cb-intf.h  track.h
software/include/proto-mcu/: mackie-msg.h  mackie-protocol.h  sys-msg-fsm.h
software/midixer_arduino/: CMakeLists.txt  compile.sh  midixer_arduino.ino
software/src/: CMakeLists.txt  mackie-control.cc  midi-msg.cc  track.cc
software/src/midi/: README.md  midi-msg.cc
software/src/midixer/: track.cc
software/src/proto-mcu/: README.md  mackie-msg.cc  mackie-protocol.cc  sys-msg-fsm.cc
software/tests/: CMakeLists.txt  test-mackie-control.cc  test-mackie-msg.cc  test-mackie-protocol.cc  test-mcu-sys-msg-fsm.cc  test-midi-msg.cc  test-track.cc
